code fixed for tile spacing

--- a/ui.frontend/src/main/webpack/etisalat/styles/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/product-grid-text-section.scss
@@ -41,6 +41,9 @@
 		h4 {
 			margin-bottom: 1rem;
 		}
+		h3 {
+			margin-top: 1rem;
+		}
 	}
 	   .table-swiper-button-next,
         .table-swiper-button-prev {
@@ -106,7 +109,7 @@
 
 .cmp__bg-cards_product-grid {
 	position: relative;
-	
+
 	.product-grid {
 		&.tile-table {
 			.tile-card {
